# harness

./: .gitignore  Cargo.toml  LICENSE  README.md
.cargo/: config.toml
.github/workflows/: rust.yml
example-crate/: Cargo.toml
example-crate/benches/: fib.rs  pop.rs  push.rs  random.rs  reversed.rs  sorted.rs  trace.rs
example-crate/src/: lib.rs
examples/binary/: Cargo.toml  README.md
examples/binary/benches/: hd_image.rs  jpg.rs  wav.rs  wikipedia.rs  xml.rs
examples/binary/src/: lib.rs
examples/simple/: Cargo.toml  README.md
examples/simple/benches/: bar.rs  foo.rs
examples/simple/src/: lib.rs
examples/sort/: Cargo.toml  README.md
examples/sort/benches/: random.rs  reversed.rs  sorted.rs  zeros.rs
examples/sort/src/: lib.rs
harness/: Cargo.toml
harness-cli/: Cargo.toml
harness-cli/src/: config.rs  lib.rs  main.rs  meta.rs  platform_info.rs
harness-cli/src/commands/: mod.rs
harness-cli/src/commands/report/: data.rs  mod.rs
harness-cli/src/commands/run/: bench_runner.rs  checks.rs  mod.rs  runner.rs
harness-cli/src/commands/run/checks/: mod.rs  pre_bench.rs  reproducibility.rs
harness-cli/src/commands/upload/: mod.rs
harness-cli/src/commands/viz/: mod.rs
harness-cli/src/configs/: harness.rs  mod.rs  run_info.rs
harness-cli/src/utils/: bench_cmd.rs  git.rs  lockfile.rs  md.rs  mod.rs  sys.rs
harness-cli/tests/: build_commit.rs  commit.rs  helper.rs  lockfile.rs
harness/macros/: Cargo.toml
harness/macros/src/: lib.rs
harness/src/: bencher.rs  benchmark.rs  lib.rs  probe.rs  record.rs
harness/src/utils/: mod.rs
macros/: Cargo.toml
macros/src/: lib.rs
probes/perf/: Cargo.toml
probes/perf/src/: lib.rs
src/: bencher.rs  checks.rs  lib.rs  probe.rs
src/runner/: config.rs  harness.rs  main.rs  meta.rs  platform_info.rs  plot.rs
src/runner/commands/: report.rs  run.rs
src/runner/commands/report/: data.rs  mod.rs  printer.rs
src/runner/commands/run/: bench_runner.rs  checks.rs  mod.rs
src/runner/utils/: md.rs
