[package]
name = "harness"
version = "0.1.0"
edition = "2021"
description = "Precise and reproducible micro benchmarking"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "cargo-harness"
path = "src/runner/main.rs"

[dependencies]
git2 = { version = "0.18.1", default-features = false }
anyhow = { version = "1.0.75", features = ["backtrace"] }
cargo_metadata = "0.18.0"
chrono = "0.4.31"
clap = { version = "4.4.6", features = ["derive"] }
env_logger = "0.10.0"
harness-macros = { path = "./macros" }
libloading = "0.8.1"
log = "0.4.20"
serde = { version = "1.0.188", features = ["derive"] }
toml = "0.8.2"
git_info = { git = "https://github.com/sagiegurari/git_info.git", rev = "3ec11fb6709ea7742652c8f11e4d4af90c971a0e" }
sysinfo = "0.29.10"
polars = { version = "0.33.2", features = ["lazy"] }
tui = "0.19.0"

[workspace]
members = [".", "macros", "example-crate", "probes/perf"]
