[workspace]
resolver = "2"
members = [
    # Harness library and CLI
    "harness",
    "harness/macros",
    "harness-cli",
    # Probes
    "probes/perf",
    # Examples
    "examples/sort",
    "examples/simple",
    "examples/binary",
]

[workspace.package]
edition = "2021"
authors = ["Wenyu Zhao <wenyuzhaox@gmail.com>"]
license = "MIT"
