[workspace]
resolver = "2"
members = [
    # Harness library and CLI
    "harness",
    "harness/macros",
    "harness-cli",
    # Probes
    "probes/perf",
    # Examples
    "examples/sort",
    "examples/simple",
    "examples/binary",
]

[workspace.package]
edition = "2021"
authors = ["Wenyu Zhao <wenyuzhaox@gmail.com>"]
license = "MIT"

[workspace.dependencies]
harness = { path = "./harness", version = "0.0" }
harness-macros = { path = "./harness/macros", version = "0.0.2" }
harness-probe-perf = { path = "./probes/perf", version = "0.0.5" }
