[package]
name = "example-crate"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"

[dev-dependencies]
harness = { path = ".." }
harness-perf = { path = "../probes/perf" }

[features]
default = []
node_enqueuing = []
edge_enqueuing = []

[[bench]]
name = "trace"
harness = false

[package.metadata.harness.profiles.default]
iterations = 5
invocations = 10
probes = ["harness_perf"]
env = { PERF_EVENTS = "PERF_COUNT_HW_CPU_CYCLES,PERF_COUNT_HW_INSTRUCTIONS,PERF_COUNT_HW_CACHE_L1D:MISS,PERF_COUNT_HW_CACHE_DTLB:MISS" }

[package.metadata.harness.profiles.default.build-variants]
node_enqueuing = { features = ["node_enqueuing"] }
edge_enqueuing = { features = ["edge_enqueuing"] }
