[package]
name = "harness-cli"
version = "0.0.2"
description = "Precise and reproducible micro benchmarking"
repository = "https://github.com/wenyuzhao/harness"
homepage = "https://github.com/wenyuzhao/harness"
documentation = "https://docs.rs/harness-cli"
categories = [
    "development-tools::profiling",
    "development-tools::cargo-plugins",
    "command-line-utilities",
]
keywords = ["benchmark", "performance", "measure", "instrument"]
edition.workspace = true
authors.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "cargo-harness"
path = "src/bin/cargo_harness.rs"

[[bin]]
name = "harness"
path = "src/bin/harness.rs"

[features]
default = []
run_order_bench_inv_build = []
run_order_bench_build_inv = []

[dependencies]
git2 = { version = "0.18.1", default-features = false }
anyhow = { version = "1.0.75", features = ["backtrace"] }
cargo_metadata = "0.18.0"
chrono = "0.4.31"
clap = { version = "4.4.6", features = ["derive"] }
env_logger = "0.10.0"
log = "0.4.20"
serde = { version = "1.0.188", features = ["derive"] }
toml = "0.8.2"
git_info2 = "0.1.2"
sysinfo = "0.29.10"
once_cell = "1.18.0"
rustc_version = "0.4.0"
polars = { version = "0.38.1", features = ["lazy", "product"] }
termimad = "0.29.1"
colored = "2.1.0"
serde_json = "1.0.114"
