[package]
name = "harness-cli"
version = "0.0.9"
description = "Precise and reproducible benchmarking"
repository = "https://github.com/wenyuzhao/harness"
homepage = "https://github.com/wenyuzhao/harness"
documentation = "https://docs.rs/harness-cli"
categories = [
    "development-tools::profiling",
    "development-tools::cargo-plugins",
    "command-line-utilities",
]
keywords = ["benchmark", "performance", "measure", "instrument"]
edition.workspace = true
authors.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "cargo-harness"
path = "src/bin/cargo_harness.rs"

[[bin]]
name = "harness"
path = "src/bin/harness.rs"

[features]
default = []
run_order_bench_inv_build = []
run_order_bench_build_inv = []

[dependencies]
git2 = { version = "0.19.0", default-features = false }
anyhow = { version = "1.0.89", features = ["backtrace"] }
cargo_metadata = "0.18.1"
chrono = "0.4.38"
clap = { version = "4.5.19", features = ["derive"] }
env_logger = "0.11.5"
log = "0.4.22"
serde = { version = "1.0.210", features = ["derive"] }
toml = "0.8.19"
git_info2 = "0.1.2"
sysinfo = "0.31.4"
once_cell = "1.20.1"
rustc_version = "0.4.1"
termimad = "0.30.0"
colored = "2.1.0"
serde_json = "1.0.128"
reqwest = { version = "0.12.8", features = ["blocking", "multipart", "json"] }
url = "2.5.2"

[dev-dependencies]
tempdir = "0.3.7"
