[package]
name = "harness"
version = "0.0.1"
edition = "2021"
description = "Precise and reproducible micro benchmarking"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.75", features = ["backtrace"] }
clap = { version = "4.4.6", features = ["derive"] }
harness-macros = { path = "./macros" }
libloading = "0.8.1"
reqwest = { version = "0.11.25", features = [
    "blocking",
    "json",
], optional = true }
once_cell = "1.18.0"

[features]
default = ["net"]
net = ["dep:reqwest"]
