[package]
name = "harness"
version = "0.0.1"
description = "Precise and reproducible micro benchmarking"
repository = "https://github.com/wenyuzhao/harness"
homepage = "https://github.com/wenyuzhao/harness"
documentation = "https://docs.rs/harness"
categories = ["development-tools::profiling"]
keywords = ["benchmark", "performance", "measure", "instrument"]
edition.workspace = true
authors.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.75", features = ["backtrace"] }
clap = { version = "4.4.6", features = ["derive"] }
harness-macros = { workspace = true }
libloading = "0.8.1"
reqwest = { version = "0.11.25", features = [
    "blocking",
    "json",
], optional = true }
once_cell = "1.18.0"
serde_json = "1.0.114"
serde = { version = "1.0.197", features = ["derive"] }

[features]
default = ["net"]
net = ["dep:reqwest"]
