[package]
name = "harness"
version = "0.0.7"
description = "Precise and reproducible benchmarking"
repository = "https://github.com/wenyuzhao/harness"
homepage = "https://github.com/wenyuzhao/harness"
documentation = "https://docs.rs/harness"
categories = ["development-tools::profiling"]
keywords = ["benchmark", "performance", "measure", "instrument"]
edition.workspace = true
authors.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.89", features = ["backtrace"] }
clap = { version = "4.5.19", features = ["derive"] }
harness-macros = { workspace = true }
libloading = "0.8.5"
reqwest = { version = "0.12.8", features = [
    "blocking",
    "json",
], optional = true }
once_cell = "1.20.1"
serde_json = "1.0.128"
serde = { version = "1.0.210", features = ["derive"] }

[features]
default = ["net"]
net = ["dep:reqwest"]
