[package]
name = "harness-macros"
version = "0.0.1"
description = "Procedural macros for the harness crate"
repository = "https://github.com/wenyuzhao/harness"
homepage = "https://github.com/wenyuzhao/harness"
documentation = "https://docs.rs/harness-macros"
categories = [
    "development-tools::profiling",
    "development-tools::procedural-macro-helpers",
]
keywords = ["benchmark", "performance", "measure", "instrument"]
edition.workspace = true
authors.workspace = true
license.workspace = true

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = { version = "2.0.29", features = ["full"] }
quote = "1.0.33"
darling = "0.20.8"

[dev-dependencies]
harness = { path = ".." }
