[package]
name = "harness-perf"
version = "0.1.0"
edition = "2021"
description = "cargo-harness probe for preporting linux perf-event counter values"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
harness = { path = "../../harness" }

[target.'cfg(target_os = "linux")'.dependencies]
pfm = "0.1.0"
