[package]
name = "harness-probe-perf"
version = "0.0.3"
description = "harness probe for reporting linux perf-event counter values"
repository = "https://github.com/wenyuzhao/harness"
homepage = "https://github.com/wenyuzhao/harness"
documentation = "https://docs.rs/harness-probe-perf"
categories = ["development-tools::profiling"]
keywords = ["benchmark", "performance", "measure", "instrument"]
edition.workspace = true
authors.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["dylib"]

[dependencies]
harness = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
pfm = "0.1.0"
